# airbnb-clone-2023-v1-

./: db.sqlite3  pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
